fix some layout issues

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -30,3 +30,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+main {
+  display: flex;
+  justify-content: center;
+}
